# rustChat-rs

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-10-21-065759_create_users/: up.sql
migrations/2024-10-21-065800_create_messages/: up.sql
migrations/2024-10-21-093122_add_session_token_to_users/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
