[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = [ "json", "ws","macros"] }
axum-extra = { version = "0.9.4", features = ["cookie","typed-header"] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid","serde_json"] }  # 移除 jsonb 特性diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }r2d2 = "0.8"
dotenvy = "0.15"
bcrypt = "0.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }  # 添加UUID生成
rand = "0.8"
headers = "0.4.0"
tower-http = { version = "0.6.1", features = ["cors"] }